terraform-topics/modules/tf-modules/SG/sg.tf
#Create security group with firewall rules
resource "aws_security_group" "batch17_security_grp" {
  name        = var.sg_name
  description = "security group for allowing SSH and HTTP traffic to EC2 instances"
  vpc_id = var.vpc_id
  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from Ec
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = var.sg_tag_name
  }
}

output "security_group_id" {
  value = aws_security_group.batch17_security_grp.id
}
